--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="row">
                 <div class="col">
                     <h1>Desafio Ejemplo</h1>
+                    <i class="fa-solid fa-angle-up"></i>
                 </div>
             </div>
         </div>
@@ -23,6 +24,7 @@
     <!-- End Header -->
 
     <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/d83e191353.js" crossorigin="anonymous"></script>
     <script src="assets/js/jquery.slim.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
