--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="fixed-top">
       <div class="container">
         <div class="row">
           <div class="col">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
               <a class="navbar-brand" href="#">
                 <img
                   src="assets/img/logo.png"
@@ -41,7 +41,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#sec-inicio">
+                    <a class="nav-link" href="#carousel-inicial">
                       Inicio <span class="sr-only">(current)</span>
                     </a>
                   </li>
@@ -62,12 +62,67 @@
       </div>
     </header>
     <!-- End Header -->
+    <!-- Carousel -->
+    <div
+      id="carousel-inicial"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carousel-inicial"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carousel-inicial" data-slide-to="1"></li>
+        <li data-target="#carousel-inicial" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/imagen01.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/imagen02.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/imagen03.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-target="#carousel-inicial"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-target="#carousel-inicial"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </button>
+    </div>
+    <!-- End Carousel -->
     <main class="container">
       <div class="row">
         <div class="col">
-          <section id="sec-inicio">
-            <h2>Inicio</h2>
-          </section>
           <section id="sec-trabajos">
             <h2>Trabajos</h2>
           </section>
