Agregando Google Font

--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desafio Ejemplo</title>
+    <!-- Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!--- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <!-- Header -->
-    <header class="fixed-top">
+    <header class="fixed-top bg-navbar">
       <div class="container">
         <div class="row">
           <div class="col">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-dark">
               <a class="navbar-brand" href="#">
                 <img
                   src="assets/img/logo.png"
@@ -120,7 +133,7 @@
       <div class="row">
         <div class="col">
           <section id="sec-trabajos" class="py-4">
-            <h2 class="text-center mb-4">Trabajos</h2>
+            <h2 class="text-center mb-4 text-rowdies">Trabajos</h2>
             <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4">
@@ -214,26 +227,26 @@
                               </div>
                               <div class="col-md-8">
                                 <p>
-                                  <strong>La ciudad de París</strong>, dentro de sus estrechos
-                                  límites administrativos, tiene una población
-                                  de 2 273 305 habitantes en 2015.2 Sin embargo,
-                                  en el siglo xx, el área metropolitana de París
-                                  se expandió más allá de los límites del
-                                  municipio de París, y es hoy en día, con una
-                                  población de 12 405 426 habitantes en 2013, la
-                                  segunda área metropolitana del continente
-                                  europeo (después de Londres) y la 28ª del
-                                  mundo.4 La región de París es junto con la de
-                                  Londres, uno de los núcleos económicos más
-                                  importantes de Europa.6 Con 607 000 millones
-                                  de euros (845 000 millones de dólares),
-                                  produjo más de una cuarta parte del producto
-                                  interior bruto (PIB) de Francia en 2011.7 La
-                                  Défense es el principal barrio de negocios de
-                                  Europa,8 alberga la sede social de casi la
-                                  mitad de las grandes empresas francesas, así
-                                  como la sede de veinte de las cien más grandes
-                                  del mundo.
+                                  <strong>La ciudad de París</strong>, dentro de
+                                  sus estrechos límites administrativos, tiene
+                                  una población de 2 273 305 habitantes en
+                                  2015.2 Sin embargo, en el siglo xx, el área
+                                  metropolitana de París se expandió más allá de
+                                  los límites del municipio de París, y es hoy
+                                  en día, con una población de 12 405 426
+                                  habitantes en 2013, la segunda área
+                                  metropolitana del continente europeo (después
+                                  de Londres) y la 28ª del mundo.4 La región de
+                                  París es junto con la de Londres, uno de los
+                                  núcleos económicos más importantes de Europa.<br /><br />6
+                                  Con 607 000 millones de euros (845 000
+                                  millones de dólares), produjo más de una
+                                  cuarta parte del producto interior bruto (PIB)
+                                  de Francia en 2011.<br /><br />7 La Défense es el
+                                  principal barrio de negocios de Europa,8
+                                  alberga la sede social de casi la mitad de las
+                                  grandes empresas francesas, así como la sede
+                                  de veinte de las cien más grandes del mundo.
                                 </p>
                               </div>
                             </div>
@@ -308,10 +321,10 @@
             </div>
           </section>
           <section id="sec-contacto">
-            <h2>Contacto</h2>
+            <h2 class="text-rowdies">Contacto</h2>
           </section>
           <section id="sec-informacion">
-            <h2>Información</h2>
+            <h2 class="text-rowdies">Información</h2>
           </section>
         </div>
       </div>
